# QuantitativeStrategy_Executionframework

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
docs/: REAL_SUBMIT_ANOMALY_MATRIX_2026-04-16.md  REAL_SUBMIT_ANOMALY_SUBMIT_CANDIDATES_2026-04-16.md  binance_specific_boundary.md  precommit_cleanup_checklist_2026-03-26.md  public_extraction_notes.md  public_private_boundary.md  strategy_integration.md
examples/: binance_api.env.example  sample_strategy_adapter.py
exec_framework/: __init__.py  async_operation.py  binance_exception_helpers.py  binance_exception_policy.py  binance_posttrade.py  binance_readonly.py  binance_readonly_pack.py  binance_readonly_probe.py  binance_readonly_sample_capture.py  binance_reconcile.py  binance_submit.py  discord_notify.py  discord_publisher.py  discord_sender_bridge.py  engine.py  executor_real.py  feature_builder.py  manual_close_position_protection_probe.py  manual_filled_with_residual_open_order_probe.py  manual_full_chain_closepos_acceptance.py  manual_lingering_protective_cleanup_probe.py  manual_partial_protective_missing_probe.py  manual_protection_semantic_mismatch_probe.py  manual_protective_missing_emergency_close_probe.py  manual_query_mismatch_probe.py  manual_real_trade_sampling_entry.py  manual_reduce_only_cleanup.py  manual_reduce_only_not_flat_probe.py  market_data.py  minimal_real_trade_sampling_helper.py  mock_modules.py  models.py  operator_log_draft.py  position_fact_reconciler.py  preclose_replay.py  protective_orders.py  replay_compare.py  replay_state_trace.py  runtime_env.py  (+12 more)
(+37 files in other folders)
